--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -293,7 +293,7 @@
   --accent-foreground: oklch(98.46% 0.002 247.84)
     --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.9911 0 0 / 6%);
+  --border: oklch(0.2565 0.0019 286.27);
   --input: oklch(0.28 0 0);
   --ring: oklch(0.439 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
