--- a/backend/core/templates/presentations/black_and_white_clean/slide_01.html
+++ b/backend/core/templates/presentations/black_and_white_clean/slide_01.html
@@ -222,7 +222,7 @@
     </div>
     
     <div class="right-section">
-      <img src="../../uploads/recorte_20251012_061013_1.png" alt="Brand Keywords and Personality Sliders" class="right-image">
+      <img src="uploads/recorte_20251012_061013_1.png" alt="Brand Keywords and Personality Sliders" class="right-image">
     </div>
   </div>
 </div>
